@@ -14,14 +14,15 @@ define(['menu/prefix'], function (prefixClass) {
     /**
      * Override the prefix action.
      */
-    onclick : function () {
+    onclick : function (e) {
       const m = this.menu();
       const value = this.value();
       const h = m.hint();
-      m.hide();
-
       h.inputField().insert(value);
-      h.active = false;
+      h.active(null);
+      m.hide();
+      // h.unshow();
+      e.halt();
     }
   };
 });
